# cinny-desktop

./: .gitignore  package-lock.json  package.json
patches/: cinny-wayland-clipboard-image-paste.patch
scripts/: apply-cinny-patches.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
